--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./pokedex.js" defer></script>
-    <link rel="stylesheet" href="./styles.scss">
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
     <title>Pokédex</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Pokédex</h1>
+    <header>
+        <img class="poke-logo" src="./Images/logo.svg">
+    </header>
+    <div class="poke-container">
     </div>
 </body>
 </html>
