--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <img class="poke-logo" src="./Images/logo.svg">
     </header>
     <div class="poke-container">
+        <div class="input-container">
+            <input id="input-search" type="text">
+        </div>
     </div>
 </body>
 </html>
