--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <header>
         <img class="poke-logo" src="./Images/logo.svg">
     </header>
-    <div class="poke-container">
-        <div class="input-container">
-            <input id="input-search" type="text">
-        </div>
+    <input id="input-search" type="text">
+    <div class="poke-container"></div>
+    <div class="'types"></div>
     </div>
 </body>
 </html>
