--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <input id="input-search" type="text">
     <div class="poke-container"></div>
-    <div class="'types"></div>
+    <div class="types"></div>
     </div>
 </body>
 </html>
