--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <header>
         <img class="poke-logo" src="./Images/logo.svg">
     </header>
-    <input id="input-search" type="text">
+    <div class="search-box-container">
+    <input id="input-search" type="text" placeholder="Search">
+</div>
+    <div class="poke-buttons"></div>
     <div class="poke-container"></div>
-    <div class="types"></div>
+        <div class="types"></div>
+
     </div>
 </body>
 </html>
